--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_fragment">
 
     <LinearLayout
@@ -14,8 +15,16 @@
         android:layout_margin="8dp"
         android:layout_marginBottom="16dp"
         android:background="@color/search_block"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
+       <androidx.appcompat.widget.SearchView
+           android:id="@+id/search_view"
+           app:queryHint="Поиск картинок"
+           app:iconifiedByDefault="false"
+           android:theme="@style/ActionBarThemeOverlay"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           />
     </LinearLayout>
 
     <FrameLayout
@@ -26,16 +35,5 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="8dp"/>
-    <TextView
-        android:id="@+id/tv_appName"
-        android:text="FindPict"
-        android:fontFamily="cursive"
-        android:textColor="@color/app_name"
-        android:textSize="64sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
-
+        android:layout_margin="8dp" />
 </RelativeLayout>
