--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,15 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="black_overlay">#66000000</color>
     <!-- Colors for app -->
-    <color name="background_fragment">#323232</color>
+    <color name="default_background">#323232</color>
+    <color name="default_background_image_info">#C60C0C0C</color>
     <color name="search_block">#515151</color>
     <color name="text_image_info">#FFFFFF</color>
     <color name="text_search_hint">#ACA9A9</color>
     <color name="text_search">#FFFFFF</color>
     <color name="app_name">#9E9C9C</color>
+    <color name="text_info_tags">#FFFFFF</color>
+    <color name="text_info_size">#ACA9A9</color>
     <color name="transparent">#009E9C9C</color>
 
 </resources>
