--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/default_background">
+
     <FrameLayout
         android:id="@+id/activity_main_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <TextView
-        android:id="@+id/tv_appName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:fontFamily="cursive"
-        android:text="FindPict"
-        android:textColor="@color/app_name"
-        android:textSize="64sp" />
-    <ImageView
-        android:id="@+id/iv_error"
-        android:src="@drawable/error"
-        android:layout_centerInParent="true"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/tv_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:fontFamily="cursive"
-        android:text="Загрузка контента..."
-        android:textColor="@color/app_name"
-        android:visibility="gone"
-        android:textSize="32sp" />
-
-
-
+        android:layout_height="match_parent"
+       />
 </RelativeLayout>
