--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/background_fragment">
+    android:background="@color/default_background">
+
 
     <LinearLayout
         android:id="@+id/search_bar"
@@ -17,18 +19,46 @@
         android:background="@color/search_block"
         android:orientation="horizontal">
 
-       <androidx.appcompat.widget.SearchView
-           android:id="@+id/search_view"
-           app:queryHint="Поиск картинок"
-           app:iconifiedByDefault="false"
-           android:theme="@style/ActionBarThemeOverlay"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           />
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/view_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:theme="@style/ActionBarThemeOverlay"
+            app:iconifiedByDefault="false"
+            app:queryHint="Поиск картинок" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/home_fragment_frame"
+    <TextView
+        android:id="@+id/view_appName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="cursive"
+        android:text="FindPict"
+        android:textColor="@color/app_name"
+        android:textSize="64sp" />
+
+    <ImageView
+        android:id="@+id/view_error"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/error"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/view_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="cursive"
+        android:text="Загрузка контента..."
+        android:textColor="@color/app_name"
+        android:textSize="32sp"
+        android:visibility="gone" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/search_bar"
