--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -11,10 +11,11 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:scaleType="centerCrop"
-        android:layout_height="128dp"/>
+        android:transitionName="1"
+        android:layout_height="128dp" />
     <TextView
         android:id="@+id/image_info_view"
-        android:text="200x600"
+        tools:text="200x600"
         android:textSize="16sp"
         android:textColor="@color/text_image_info"
         android:layout_width="wrap_content"
