--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-     android:layout_width="wrap_content"
     android:layout_margin="2dp"
     android:background="@color/search_block">
+
     <ImageView
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
+        android:layout_height="128dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        android:transitionName="1"
-        android:layout_height="128dp" />
+        android:transitionName="1" />
+
     <TextView
         android:id="@+id/image_info_view"
-        tools:text="200x600"
-        android:textSize="16sp"
-        android:textColor="@color/text_image_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_below="@id/imageView"
-
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/text_image_info"
+        android:textSize="16sp"
+        tools:text="200x600" />
 </RelativeLayout>
