added drawable for splash screen

--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -9,7 +9,7 @@
     <item>
 
         <bitmap
-            android:src="@drawable/icons8___64"
+            android:src="@drawable/logomakr_5mkq3f"
             android:gravity="center"/>
 
     </item>
