--- a/app/src/main/res/layout/details_image_fragment.xml
+++ b/app/src/main/res/layout/details_image_fragment.xml
@@ -4,18 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_background">
-
     <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:id="@+id/view_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/view_block_btn"
-        android:layout_below="@id/view_block_info"
         android:layout_centerInParent="true"
         android:transitionName="@string/default_transition_name" />
 
     <LinearLayout
-        android:id="@+id/view_block_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -27,9 +23,10 @@
 
         <ImageView
             android:id="@+id/view_arrowBack"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="16dp"
+            android:layout_width="@dimen/arrow_back_width"
+            android:layout_height="@dimen/arrow_back_height"
+            android:layout_margin="@dimen/default_medium_margin"
+            android:background="@drawable/btn_ripple"
             android:src="@drawable/ic_baseline_arrow_back_24" />
 
         <LinearLayout
@@ -41,10 +38,10 @@
                 android:id="@+id/view_tags"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/default_medium_margin"
+                android:layout_marginTop="@dimen/default_small_margin"
+                android:layout_marginEnd="@dimen/default_medium_margin"
+                android:layout_marginBottom="@dimen/default_small_margin"
                 android:textColor="@color/text_info_tags"
                 tools:text="Tags: rose,flower" />
 
@@ -52,15 +49,30 @@
                 android:id="@+id/view_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/default_medium_margin"
+                android:layout_marginEnd="@dimen/default_medium_margin"
+                android:layout_marginBottom="@dimen/default_small_margin"
                 android:textColor="@color/text_info_size"
                 tools:text="500x600" />
         </LinearLayout>
     </LinearLayout>
 
-
+    <FrameLayout
+        android:id="@+id/view_error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_medium_margin"
+        android:background="@color/error_btn"
+        android:layout_above="@id/view_block_btn"
+        android:visibility="gone">
+        <ImageView
+            android:id="@+id/view_error_btn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/error_btn_height"
+            android:padding="@dimen/default_small_padding"
+            android:background="@drawable/btn_ripple_default"
+            android:src="@drawable/ic_baseline_replay_24"/>
+    </FrameLayout>
     <LinearLayout
         android:id="@+id/view_block_btn"
         android:layout_width="match_parent"
@@ -73,10 +85,30 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/view_btn_internet"
+            android:layout_width="@dimen/default_icon_btn_size"
+            android:layout_height="@dimen/default_icon_btn_size"
+            android:layout_margin="@dimen/default_medium_margin"
+            android:layout_weight="1"
+            android:background="@drawable/btn_ripple"
+            android:src="@drawable/ic_baseline_public_24" />
+
+        <ImageView
+            android:id="@+id/view_btn_share"
+            android:layout_width="@dimen/default_icon_btn_size"
+            android:layout_height="@dimen/default_icon_btn_size"
+            android:layout_margin="@dimen/default_medium_margin"
+            android:layout_weight="1"
+            android:background="@drawable/btn_ripple"
+            android:src="@drawable/ic_baseline_share_24" />
+
+        <ImageView
             android:id="@+id/view_btn_save"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="16dp"
+            android:layout_width="@dimen/default_icon_btn_size"
+            android:layout_height="@dimen/default_icon_btn_size"
+            android:layout_margin="@dimen/default_medium_margin"
+            android:layout_weight="1"
+            android:background="@drawable/btn_ripple"
             android:src="@drawable/ic_baseline_save_24" />
     </LinearLayout>
 </RelativeLayout>
