--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -10,12 +10,12 @@
     <LinearLayout
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/default_search_bar_height"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="@dimen/default_small_margin"
+        android:layout_marginBottom="@dimen/default_medium_margin"
         android:background="@color/search_block"
         android:orientation="horizontal">
 
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:theme="@style/ActionBarThemeOverlay"
             app:iconifiedByDefault="false"
-            app:queryHint="Поиск картинок" />
+            app:queryHint="@string/home_fragment_default_query_hint" />
     </LinearLayout>
 
     <TextView
@@ -34,17 +34,11 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:fontFamily="cursive"
-        android:text="FindPict"
-        android:textColor="@color/app_name"
-        android:textSize="64sp" />
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/default_text_color"
+        android:textSize="@dimen/default_large_text_size" />
 
-    <ImageView
-        android:id="@+id/view_error"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/error"
-        android:visibility="gone" />
 
     <TextView
         android:id="@+id/view_loading"
@@ -52,18 +46,76 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:fontFamily="cursive"
-        android:text="Загрузка контента..."
-        android:textColor="@color/app_name"
-        android:textSize="32sp"
+        android:gravity="center"
+        android:text="@string/home_fragment_default_load_pictures"
+        android:textColor="@color/default_text_color"
+        android:textSize="@dimen/default_medium_text_size"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/view_no_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="@string/home_fragment_default_no_pictures"
+        android:textColor="@color/default_text_color"
+        android:textSize="@dimen/default_medium_two_text_size"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/view_first_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="@dimen/default__extra_large_margin"
+        android:layout_marginEnd="@dimen/default__extra_large_margin"
+        android:gravity="center"
+        android:text="@string/home_fragment_default_first_failed_load"
+        android:textColor="@color/default_text_color"
+        android:textSize="@dimen/default_small_two_text_size"
+        android:visibility="gone" />
+
+
+    <FrameLayout
+        android:id="@+id/view_error_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginBottom="@dimen/default_medium_margin"
+        android:background="@color/error_btn">
+
+        <ImageView
+            android:id="@+id/view_error"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/default_error_frame_height"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_ripple_default"
+            android:padding="@dimen/default_small_padding"
+            android:src="@drawable/ic_baseline_replay_24" />
+    </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@id/view_error_frame"
         android:layout_below="@+id/search_bar"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="8dp" />
+        android:layout_margin="@dimen/default_small_margin" />
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/view_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/search_bar"
+        android:visibility="gone">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
