--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="@dimen/default_extra_small_padding"
     android:background="@color/search_block">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="@dimen/default_image_height"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
@@ -22,6 +22,6 @@
         android:layout_below="@id/imageView"
         android:layout_alignParentEnd="true"
         android:textColor="@color/text_image_info"
-        android:textSize="16sp"
+        android:textSize="@dimen/default_small_text_size"
         tools:text="200x600" />
 </RelativeLayout>
