--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorPrimaryDarkSave">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="black_overlay">#66000000</color>
     <!-- Colors for app -->
     <color name="default_background">#323232</color>
     <color name="default_background_image_info">#C60C0C0C</color>
@@ -12,9 +10,12 @@
     <color name="text_image_info">#FFFFFF</color>
     <color name="text_search_hint">#ACA9A9</color>
     <color name="text_search">#FFFFFF</color>
-    <color name="app_name">#9E9C9C</color>
+    <color name="default_text_color">#9E9C9C</color>
     <color name="text_info_tags">#FFFFFF</color>
     <color name="text_info_size">#ACA9A9</color>
-    <color name="transparent">#009E9C9C</color>
+    <color name="text_dialog_fragment">#FFFFFF</color>
+    <color name="ripple_color">#9E9C9C</color>
+    <color name="error_btn">#404040</color>
+    <color name="default_refresh_color">#2C2C2C</color>
 
 </resources>
